tests/toy/pos/000104_cdrc2.toylang
program a = { if 0 then sleep else sleep; } .
