tests/toy/neg/000938_mutation.toylang
program a = { if a program sleep; } .
